--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ theme:
     name: material
 nav:
     - Home: index.md
+    - Teaching: teaching.md
     - Research: research.md
     - Learning: learning.md
 extra:
@@ -18,4 +19,13 @@ extra:
       link: https://www.researchgate.net/profile/David-Clarke-47
     - icon: fontawesome/brands/orcid
       link: https://orcid.org/0000-0002-5570-0894 
-
+markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
