--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
     - Teaching: teaching.md
     - Research: research.md
     - Learning: learning.md
+    - Outreach: outreach.md
 extra:
   social:
     - icon: fontawesome/brands/twitter 
